# InsuLite

./: .gitignore  PKG-INFO  README.md  SOURCES.txt  __init__.py  app.py  cli.py  config.py  conftest.py  data.py  ensemble.py  entry_points.txt  explainability.py  features.py  models.py  nodeids  pipeline.py  preprocessing.py  pyproject.toml  requirements.txt  test_features.py  test_preprocessing.py  top_level.txt  tuning.py  uncertainty.py  validation.py
.streamlit/: config.toml
pages/: 1_Data_Explorer.py  2_Predict.py  3_Model_Comparison.py  4_Explainability.py  5_Uncertainty.py  6_Run_Pipeline.py
src/insurance_ml/: __init__.py  config.py  data.py  ensemble.py  explainability.py  features.py  models.py  pipeline.py  preprocessing.py  tuning.py  uncertainty.py  validation.py
