[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-ml-pipeline"
version = "1.0.0"
description = "Modular ML pipeline for medical insurance premium prediction: feature engineering, model comparison, stacked ensembling, Bayesian tuning, SHAP explainability and quantile uncertainty."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.5",
    "shap>=0.44",
    "scipy>=1.11",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "streamlit>=1.33",
    "plotly>=5.18",
]

[project.scripts]
insurance-ml = "insurance_ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
